// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HowToSearch renders freetext examples after freetext radio option is selected 1`] = `
<div>
  <div
    className="mb3 tc"
  >
    <RadioGroup
      buttonStyle="outline"
      onChange={[Function]}
      value="freetext"
    >
      <RadioButton
        value="spires"
      >
        spires
      </RadioButton>
      <RadioButton
        value="freetext"
      >
        free text
      </RadioButton>
    </RadioGroup>
  </div>
  <div>
    <FreetextExamples />
  </div>
  <div
    className="tc"
  >
    <ExternalLink
      as={[Function]}
      className="mt3"
      href="https://labs.inspirehep.net/help/knowledge-base/inspire-paper-search"
      type="primary"
    >
      Learn more
    </ExternalLink>
  </div>
</div>
`;

exports[`HowToSearch renders with spires examples by default 1`] = `
<div>
  <div
    className="mb3 tc"
  >
    <RadioGroup
      buttonStyle="outline"
      onChange={[Function]}
      value="spires"
    >
      <RadioButton
        value="spires"
      >
        spires
      </RadioButton>
      <RadioButton
        value="freetext"
      >
        free text
      </RadioButton>
    </RadioGroup>
  </div>
  <div>
    <SpiresExamples />
  </div>
  <div
    className="tc"
  >
    <ExternalLink
      as={[Function]}
      className="mt3"
      href="https://labs.inspirehep.net/help/knowledge-base/inspire-paper-search"
      type="primary"
    >
      Learn more
    </ExternalLink>
  </div>
</div>
`;
